--- a/CSS/koci.css
+++ b/CSS/koci.css
@@ -1,3 +1,7 @@
+head link icon {
+    border-radius: 20%;
+}
+
 body{
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
@@ -54,7 +58,7 @@ footer{
     background-color: aqua;
     text-align: center;
     color: white;
-    padding: 50px;
+    padding: 30px;
 }
 footer p{
     margin: 0;
@@ -70,6 +74,6 @@ footer a:hover{
 p.caption{
     color: aquamarine;
     font-style: italic;
-    margin-top: 0;
+    margin-top: -12px;
     line-height: 3px;
 }
